--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -78,7 +78,7 @@ body {
   width: 100%;
   border: none;
   padding: 0.25rem 0.25rem 0.35rem;
-  border-bottom: solid 2px #7A7A7A;
+  border-bottom: solid 2px #7a7a7a;
 }
 
 .c-search__button {
@@ -97,19 +97,19 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: .2rem;
+  gap: 0.2rem;
   -webkit-box-ordinal-group: 4;
       -ms-flex-order: 3;
           order: 3;
 }
 
 .c-cart .c-cart__number {
-  background-color: #F8475F;
+  background-color: #f8475f;
   color: #fff;
   font-weight: bold;
   width: 15px;
   height: 15px;
-  padding: .3rem;
+  padding: 0.3rem;
   border-radius: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -141,8 +141,8 @@ body {
         -ms-flex-order: 3;
             order: 3;
     text-decoration: none;
-    gap: .5rem;
-    color: #7A7A7A;
+    gap: 0.5rem;
+    color: #7a7a7a;
   }
   .c-account__button:hover {
     text-decoration: underline;
@@ -201,6 +201,10 @@ body {
   transition: 0.2s all ease;
 }
 
+.c-btn-mobile.u-active {
+  z-index: 11;
+}
+
 .c-btn-mobile.u-active::before {
   -webkit-transform: translateY(0px) rotate(45deg);
           transform: translateY(0px) rotate(45deg);
@@ -211,5 +215,49 @@ body {
 .c-btn-mobile.u-active::after {
   -webkit-transform: translateY(0px) rotate(-45deg);
           transform: translateY(0px) rotate(-45deg);
+}
+
+.c-mobile__menu {
+  display: none;
+  height: 0;
+  -webkit-transition: .5s all ease;
+  transition: .5s all ease;
+}
+
+.c-mobile__menu.u-menu__active {
+  z-index: 10;
+  position: absolute;
+  background: #7a7a7a;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  top: -20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 7rem 0;
+  gap: 0.2rem;
+  -webkit-transition: .5s all ease;
+  transition: .5s all ease;
+}
+
+.c-mobile__link {
+  width: 100%;
+  z-index: 11;
+  padding: 1rem;
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.c-mobile__link:hover {
+  background: #f8475f;
 }
 /*# sourceMappingURL=styles.css.map */
