--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,8 @@
 /* import colors */
 $white: #fff;
 $black: #000;
-$gray: #7A7A7A;
-$purple:#F8475F;
+$gray: #7a7a7a;
+$purple: #f8475f;
 @mixin resetButton {
   border: none;
   background: none;
@@ -45,7 +45,7 @@ body {
   margin: 0 15% 15px;
   @media (min-width: 950px) {
     order: 1;
-    margin:0;
+    margin: 0;
   }
 }
 .c-input {
@@ -74,15 +74,15 @@ body {
 .c-cart {
   display: flex;
   align-items: center;
-  gap: .2rem;
+  gap: 0.2rem;
   order: 3;
-  .c-cart__number{
+  .c-cart__number {
     background-color: $purple;
     color: $white;
     font-weight: bold;
     width: 15px;
     height: 15px;
-    padding: .3rem;
+    padding: 0.3rem;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -97,9 +97,9 @@ body {
     justify-content: center;
     order: 3;
     text-decoration: none;
-    gap: .5rem;
+    gap: 0.5rem;
     color: $gray;
-    &:hover{
+    &:hover {
       text-decoration: underline;
     }
   }
@@ -125,11 +125,43 @@ body {
   }
 }
 .c-btn-mobile.u-active {
+  z-index: 11;
   &::before {
     transform: translateY(0px) rotate(45deg);
     box-shadow: 0 0 0 $black;
   }
   &::after {
     transform: translateY(0px) rotate(-45deg);
+  }
+}
+.c-mobile__menu {
+  display: none;
+  height: 0;
+  transition: .5s all ease;
+}
+.c-mobile__menu.u-menu__active {
+  z-index: 10;
+  position: absolute;
+  background: $gray;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  top: -20px;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 7rem 0;
+  gap: 0.2rem;
+  transition: .5s all ease;
+}
+.c-mobile__link {
+  width: 100%;
+  z-index: 11;
+  padding: 1rem;
+  text-decoration: none;
+  color: $white;
+  font-size: 1.5rem;
+  font-weight: 600;
+  &:hover {
+    background: $purple;
   }
 }
