--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -220,8 +220,8 @@ body {
 .c-mobile__menu {
   display: none;
   height: 0;
-  -webkit-transition: .5s all ease;
-  transition: .5s all ease;
+  -webkit-transition: 0.5s all ease;
+  transition: 0.5s all ease;
 }
 
 .c-mobile__menu.u-menu__active {
@@ -243,8 +243,8 @@ body {
           justify-content: flex-start;
   padding: 7rem 0;
   gap: 0.2rem;
-  -webkit-transition: .5s all ease;
-  transition: .5s all ease;
+  -webkit-transition: 0.5s all ease;
+  transition: 0.5s all ease;
 }
 
 .c-mobile__link {
@@ -261,15 +261,23 @@ body {
   background: #f8475f;
 }
 
-/* Style main */
+/* Style banner */
 .c-banner__carousel .c-banner__image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100vw;
   height: 200px;
 }
 
 @media (min-width: 950px) {
   .c-banner__carousel .c-banner__image {
+    width: 100vw;
     height: 400px;
   }
+}
+
+.slick-track {
+  padding: 0 !important;
 }
 
 .slick-dots {
@@ -278,13 +286,232 @@ body {
 
 .slick-dots li button:before {
   color: #fff;
-  opacity: .75;
-  font-size: .75rem;
+  opacity: 0.75;
+  font-size: 0.75rem;
   line-height: 0;
 }
 
 .slick-dots li.slick-active button:before {
   color: #fff;
-  opacity: .5;
+  opacity: 0.5;
+}
+
+/* Style products */
+.c-products {
+  margin: 0 auto;
+  padding: 0rem .5rem;
+}
+
+@media (min-width: 950px) {
+  .c-products {
+    padding: 0rem 1rem;
+    width: 80%;
+  }
+}
+
+.c-section__title-text {
+  font-weight: 900;
+  position: relative;
+}
+
+.c-section__title-text::before {
+  content: "";
+  width: 65px;
+  height: 5px;
+  background: #c0c0c0;
+  position: absolute;
+  top: 110%;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: #000;
+}
+
+.c-product {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.c-product__image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-width: 100%;
+}
+
+.c-product__infos {
+  width: 80%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-items: center;
+  padding: 0.5rem 1rem;
+  -ms-grid-rows: 35px 20px 10px 35px 35px 35px;
+      grid-template-rows: 35px 20px 10px 35px 35px 35px;
+      grid-template-areas: "name" "stars" "secondary_prize" "principal_prize" "installment" "button";
+}
+
+.c-product__infos:hover {
+  background: #e6e8ea;
+}
+
+@media (min-width: 950px) {
+  .c-product__infos {
+    width: 80%;
+    -ms-grid-rows: 25px 15px 10px 35px 35px 35px;
+        grid-template-rows: 25px 15px 10px 35px 35px 35px;
+  }
+}
+
+.c-product__name {
+  font-size: 0.75rem;
+  color: #7a7a7a;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: name;
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+.c-product__infos ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: stars;
+}
+
+.c-secondary__prize {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: secondary_prize;
+  text-align: center;
+}
+
+.c-product__installment {
+  -ms-grid-row: 5;
+  -ms-grid-column: 1;
+  grid-area: installment;
+  text-align: center;
+}
+
+.c-secondary__prize,
+.c-product__installment {
+  font-weight: regular;
+  color: #7a7a7a;
+  font-size: 0.75rem;
+}
+
+.c-principal__prize {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  grid-area: principal_prize;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.slick-initialized .slick-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.c-button {
+  color: #fff;
+  background: #000;
+  font-weight: bold;
+  border: none;
+  padding: 0 2rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.c-product__infos .c-button {
+  -ms-grid-row: 6;
+  -ms-grid-column: 1;
+  grid-area: button;
+  display: none;
+}
+
+.c-product__infos:hover .c-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: .2s all ease;
+  transition: .2s all ease;
+}
+
+.c-product__infos:hover .c-button:hover {
+  -webkit-transform: skew(15deg);
+          transform: skew(15deg);
+}
+
+.c-off {
+  top: 0;
+  right: 0;
+  position: absolute;
+  font-weight: bold;
+  background-color: #f8475f;
+  -webkit-clip-path: polygon(65% 0, 100% 35%, 100% 0);
+          clip-path: polygon(65% 0, 100% 35%, 100% 0);
+  width: 200px;
+  height: 200px;
+}
+
+.c-off::before {
+  content: "OFF";
+  color: #fff;
+  top: 15px;
+  right: 5px;
+  position: absolute;
+  font-weight: 900;
+}
+
+.slick-slide {
+  margin: 0 5px;
 }
 /*# sourceMappingURL=styles.css.map */
