--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,8 +2,6 @@
 body {
   width: 100%;
   height: 100%;
-  /* display: grid;
-  grid-template-rows: auto 1fr auto; */
   font-family: "Nunito", Courier, monospace;
 }
 
@@ -247,6 +245,12 @@ body {
   transition: 0.5s all ease;
 }
 
+@media (min-width: 950px) {
+  .c-mobile__menu.u-menu__active {
+    display: none;
+  }
+}
+
 .c-mobile__link {
   width: 100%;
   z-index: 11;
@@ -262,6 +266,10 @@ body {
 }
 
 /* Style banner */
+.c-banner__carousel {
+  width: 100vw;
+}
+
 .c-banner__carousel .c-banner__image {
   -o-object-fit: cover;
      object-fit: cover;
@@ -271,6 +279,11 @@ body {
 
 @media (min-width: 950px) {
   .c-banner__carousel .c-banner__image {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-line-pack: center;
+        align-content: center;
     width: 100vw;
     height: 400px;
   }
