--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,8 +21,6 @@ $purple: #f8475f;
 body {
   width: 100%;
   height: 100%;
-  /* display: grid;
-  grid-template-rows: auto 1fr auto; */
   font-family: "Nunito", Courier, monospace;
 }
 /* Style header */
@@ -152,6 +150,9 @@ body {
   padding: 7rem 0;
   gap: 0.2rem;
   transition: 0.5s all ease;
+  @media (min-width: 950px) {
+    display: none;
+  }
 }
 .c-mobile__link {
   width: 100%;
@@ -167,6 +168,7 @@ body {
 }
 /* Style banner */
 .c-banner__carousel {
+  width: 100vw;
   .c-banner__image {
     object-fit: cover;
     width: 100vw;
@@ -174,6 +176,8 @@ body {
   }
   @media (min-width: 950px) {
     .c-banner__image {
+      display: flex;
+      align-content: center;
       width: 100vw;
       height: 400px;
     }
