--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -57,6 +57,12 @@ body {
     width: 50%;
   }
 }
+.c-button{
+  transition: .2s all ease;
+  &:hover{
+    transform: scale(1.05);
+  }
+}
 .c-header__search {
   width: 100%;
   border: none;
@@ -168,7 +174,7 @@ body {
 }
 /* Style banner */
 .c-banner__carousel {
-  width: 100vw;
+  /* width: 100vw; */
   .c-banner__image {
     object-fit: cover;
     width: 100vw;
@@ -233,6 +239,10 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  transition: .2s all ease;
+  &:hover{
+    transform: scale(1.05);
+  }
 }
 .c-product__image {
   object-fit: cover;
@@ -244,7 +254,7 @@ body {
   display: grid;
   justify-content: center;
   justify-items: center;
-  padding: 0.5rem 1rem;
+  padding: 1rem 1rem;
   grid-template-rows: 35px 20px 10px 35px 35px 35px;
   grid-template-areas:
     "name"
