--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,7 +17,6 @@ $purple: #f8475f;
   transform: translateY($translate);
   transition: 0.2s all ease;
 }
-
 body {
   width: 100%;
   height: 100%;
@@ -174,19 +173,12 @@ body {
 }
 /* Style banner */
 .c-banner__carousel {
-  /* width: 100vw; */
+ 
   .c-banner__image {
+    position: relative;
     object-fit: cover;
-    width: 100vw;
-    height: 200px;
-  }
-  @media (min-width: 950px) {
-    .c-banner__image {
-      display: flex;
-      align-content: center;
-      width: 100vw;
-      height: 400px;
-    }
+    height: 22.5vw;
+    left: 8.25px;
   }
 }
 .slick-track {
@@ -342,6 +334,7 @@ body {
   clip-path: polygon(65% 0, 100% 35%, 100% 0);
   width: 200px;
   height: 200px;
+  z-index: 10;
   &::before {
     content: "OFF";
     color: $white;
