--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,253 +1,297 @@
-/* import colors */
 $white: #fff;
 $black: #000;
 $gray: #7a7a7a;
 $purple: #f8475f;
-@mixin resetButton {
-  border: none;
-  background: none;
+
+@mixin reset-button {
   cursor: pointer;
+  background: none;
+  border: none;
 }
-@mixin buttonConfig($translate) {
-  content: "";
+
+@mixin button-config($translate) {
   position: absolute;
-  width: 35px;
-  height: 4px;
+  width: 2.1875rem;
+  height: 0.25rem;
+  content: "";
   background: $black;
-  transform: translateY($translate);
   transition: 0.2s all ease;
+  transform: translateY($translate);
 }
+
 body {
-  width: 100%;
-  height: 100%;
-  font-family: "Nunito", Courier, monospace;
+  font-family: Nunito, Courier, monospace;
 }
+
 /* Style header */
 .c-header {
-  padding: 0.8rem 0rem;
-  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
   justify-content: center;
-  flex-wrap: wrap;
+  padding: 0.8rem 0;
+
   @media (min-width: 950px) {
-    gap: 3rem;
     align-items: center;
+    gap: 3rem;
   }
 }
+
 .c-header__image {
+  order: 2;
   min-width: 100px;
   max-width: 35%;
-  order: 2;
   margin: 0 15% 15px;
+
   @media (min-width: 950px) {
     order: 1;
     margin: 0;
   }
 }
+
 .c-input {
-  order: 4;
-  width: 90%;
+  position: relative;
   display: flex;
   align-items: center;
-  position: relative;
+  order: 4;
+  width: 90%;
+
   @media (min-width: 950px) {
     order: 2;
     width: 50%;
   }
 }
-.c-button{
-  transition: .2s all ease;
-  &:hover{
-    transform: scale(1.05);
-  }
-}
+
 .c-header__search {
   width: 100%;
-  border: none;
   padding: 0.25rem 0.25rem 0.35rem;
+  border: none;
   border-bottom: solid 2px $gray;
 }
+
 .c-search__button {
-  @include resetButton;
+  @include reset-button;
+
   position: absolute;
   top: 0;
   right: 0;
 }
+
 .c-cart {
   display: flex;
   align-items: center;
-  gap: 0.2rem;
   order: 3;
+  gap: 0.2rem;
+
   .c-cart__number {
-    background-color: $purple;
-    color: $white;
-    font-weight: bold;
-    width: 15px;
-    height: 15px;
-    padding: 0.3rem;
-    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 15px;
+    height: 15px;
+    padding: 0.3rem;
+    font-weight: bold;
+    color: $white;
+    background-color: $purple;
+    border-radius: 50%;
   }
 }
+
 .c-account__button {
   display: none;
+
   @media (min-width: 950px) {
     display: flex;
     align-items: center;
     justify-content: center;
     order: 3;
+    color: $gray;
     text-decoration: none;
     gap: 0.5rem;
-    color: $gray;
+
     &:hover {
       text-decoration: underline;
     }
   }
 }
+
 .c-btn-mobile {
   @media (min-width: 950px) {
     display: none;
   }
   position: relative;
-  @include resetButton;
-  width: 35px;
-  height: 35px;
   display: flex;
+
   align-items: center;
   justify-content: center;
+  width: 35px;
+  height: 35px;
   transition: 0.2s all ease;
+
+  @include reset-button;
+
   &::before {
-    @include buttonConfig(-10px);
+    @include button-config(-10px);
+
     box-shadow: 0 10px 0 $black;
   }
+
   &::after {
     @include buttonConfig(10px);
   }
 }
+
 .c-btn-mobile.u-active {
   z-index: 11;
+
   &::before {
-    transform: translateY(0px) rotate(45deg);
     box-shadow: 0 0 0 $black;
+    transform: translateY(0) rotate(45deg);
   }
+
   &::after {
-    transform: translateY(0px) rotate(-45deg);
+    transform: translateY(0) rotate(-45deg);
   }
 }
+
 .c-mobile__menu {
   display: none;
   height: 0;
   transition: 0.5s all ease;
 }
+
 .c-mobile__menu.u-menu__active {
-  z-index: 10;
   position: absolute;
-  background: $gray;
-  width: 100%;
-  height: 100%;
-  display: flex;
   top: -20px;
+  z-index: 10;
+  display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  width: 100%;
+  height: 100%;
   padding: 7rem 0;
-  gap: 0.2rem;
+  background: $gray;
   transition: 0.5s all ease;
+  gap: 0.2rem;
+
   @media (min-width: 950px) {
     display: none;
   }
 }
+
 .c-mobile__link {
-  width: 100%;
   z-index: 11;
+  width: 100%;
   padding: 1rem;
-  text-decoration: none;
-  color: $white;
   font-size: 1.5rem;
   font-weight: 600;
+  color: $white;
+  text-decoration: none;
+
   &:hover {
     background: $purple;
   }
 }
+
 /* Style banner */
 .c-banner__carousel {
- 
   .c-banner__image {
     position: relative;
-    object-fit: cover;
+    left: 0.0313rem;
     height: 22.5vw;
-    left: 8.25px;
+    object-fit: cover;
+
+    @media (min-width: 900px) {
+      left: 0.5469rem;
+    }
   }
 }
+
+.slick-slide {
+  margin: 0 5px;
+
+  @media (min-width: 950px) {
+    margin: 0 20px;
+  }
+}
+
 .slick-track {
   padding: 0 !important;
 }
+
 .slick-dots {
   bottom: 0;
 }
-.slick-dots li button:before {
-  color: $white;
-  opacity: 0.75;
+
+.slick-dots li button::before {
   font-size: 0.75rem;
   line-height: 0;
-}
-.slick-dots li.slick-active button:before {
   color: $white;
-  opacity: 0.5;
+  opacity: 75%;
 }
+
+.slick-dots li.slick-active button::before {
+  color: $white;
+  opacity: 50%;
+}
+
 /* Style products */
 .c-products {
+  padding: 0 0.5rem;
   margin: 0 auto;
-  padding: 0rem 0.5rem;
+
   @media (min-width: 950px) {
-    padding: 0rem 1rem 2rem;
     width: 80%;
+    padding: 0 1rem 2rem;
   }
 }
+
 .c-section__title-text {
-  font-weight: 900;
   position: relative;
+  font-weight: 900;
+
   &::before {
-    content: "";
-    width: 65px;
-    height: 5px;
-    background: #c0c0c0;
     position: absolute;
     top: 110%;
+    width: 65px;
+    height: 5px;
+    content: "";
+    background: #c0c0c0;
   }
 }
-.slick-prev:before,
-.slick-next:before {
+
+.slick-prev::before,
+.slick-next::before {
   color: $black;
 }
+
 .c-product {
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  transition: .2s all ease;
-  &:hover{
+  transition: 0.2s all ease;
+
+  &:hover {
     transform: scale(1.05);
   }
 }
+
 .c-product__image {
-  object-fit: cover;
   max-width: 100%;
+  object-fit: cover;
 }
+
 .c-product__infos {
-  width: 80%;
-  height: 100%;
   display: grid;
   justify-content: center;
-  justify-items: center;
-  padding: 1rem 1rem;
-  grid-template-rows: 35px 20px 10px 35px 35px 35px;
+  width: 80%;
+  height: 100%;
+  padding: 1rem;
   grid-template-areas:
     "name"
     "stars"
@@ -255,163 +299,191 @@ body {
     "principal_prize"
     "installment"
     "button";
+  grid-template-rows: 35px 20px 10px 35px 35px 35px;
+  justify-items: center;
+
   &:hover {
     background: #e6e8ea;
   }
+
   @media (min-width: 950px) {
-    width: 80%;
     grid-template-rows: 35px 15px 10px 35px 35px 35px;
+    width: 80%;
   }
 }
+
 .c-product__name {
   font-size: 0.75rem;
   color: $gray;
-  grid-area: name;
   text-align: center;
+  grid-area: name;
 }
+
 .c-product__infos ul {
   display: flex;
   align-items: baseline;
   justify-content: center;
-  list-style-type: none;
-  margin: 0;
   padding: 0;
+  margin: 0;
+  list-style-type: none;
   grid-area: stars;
 }
+
 .c-secondary__prize {
   grid-area: secondary_prize;
   text-align: center;
 }
+
 .c-product__installment {
   grid-area: installment;
   text-align: center;
 }
+
 .c-secondary__prize,
 .c-product__installment {
+  font-size: 0.75rem;
   font-weight: regular;
   color: $gray;
-  font-size: 0.75rem;
 }
+
 .c-principal__prize {
-  grid-area: principal_prize;
   font-size: 1.2rem;
   font-weight: bold;
+  grid-area: principal_prize;
 }
+
 .slick-initialized .slick-slide {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
 }
+
 .c-button {
-  color: $white;
-  background: $black;
-  font-weight: bold;
-  border: none;
   padding: 0 2rem;
-  border-radius: 5px;
+  font-weight: bold;
+  color: $white;
   cursor: pointer;
+  background: $black;
+  border: none;
+  border-radius: 5px;
+  transition: 0.2s all ease;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
+
 .c-product__infos .c-button {
-  grid-area: button;
   display: none;
+  grid-area: button;
 }
+
 .c-product__infos:hover .c-button {
   display: flex;
   align-items: center;
   justify-content: center;
   transition: 0.2s all ease;
+
   &:hover {
     transform: skew(15deg);
   }
 }
+
 .c-off {
+  position: absolute;
   top: 0;
   right: 0;
-  position: absolute;
+  z-index: 10;
+  width: 200px;
+  height: 200px;
   font-weight: bold;
   background-color: $purple;
   clip-path: polygon(65% 0, 100% 35%, 100% 0);
-  width: 200px;
-  height: 200px;
-  z-index: 10;
+
   &::before {
-    content: "OFF";
-    color: $white;
+    position: absolute;
     top: 15px;
     right: 5px;
-    position: absolute;
     font-weight: 900;
-  }
-}
-.slick-slide {
-  margin: 0 5px;
-  @media (min-width: 950px) {
-    margin: 0 20px;
+    color: $white;
+    content: "OFF";
   }
 }
 
 /* Style newsletter */
 .c-newsletter {
-  background-color: #f2f2f2;
-  height: auto;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  height: auto;
   padding: 0.5rem 1rem 2rem 0.5rem;
+  background-color: #f2f2f2;
+
   .c-button {
     order: 2;
-    height: 50px;
     width: 90%;
+    height: 50px;
   }
-  .c-input__container{
+
+  .c-input__container {
     width: 100%;
   }
-  .c-input{
+
+  .c-input {
     order: 1;
-    padding: 1rem;
     width: 100%;
+    padding: 1rem;
     border: none;
     border-radius: 5px;
+
     &::placeholder {
       font-weight: bold;
     }
   }
-  .c-small{
-    color: red;
+
+  .c-small {
     display: none;
+    color: red;
   }
-  .c-small.u-small__active{
+
+  .c-small.u-small__active {
     display: inline-block;
   }
+
   @media (min-width: 950px) {
     .c-button {
       order: 2;
-      height: 50px;
       max-width: 140px;
+      height: 50px;
     }
+
     .c-input {
       width: 90%;
     }
-    .c-input__container{
-      width: 25%;
+
+    .c-input__container {
       position: relative;
-      .c-small{
-        color: red;
+      width: 25%;
+
+      .c-small {
         position: absolute;
         margin-top: 5px;
+        color: red;
       }
     }
   }
 }
+
 .c-form {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  gap: 0.5rem;
   width: 100%;
+  gap: 0.5rem;
+
   @media (min-width: 950px) {
     flex-direction: row;
   }
@@ -419,63 +491,72 @@ body {
 
 /* Style footer */
 .l-footer {
-  background-color: $black;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  flex-direction: column;
-  color: $white;
   padding: 0 1rem;
+  color: $white;
+  background-color: $black;
   gap: 1.5rem;
+
   @media (min-width: 950px) {
     flex-direction: row;
   }
 }
-.c-localization{
+
+.c-localization {
   align-self: flex-start;
 }
+
 .c-localization__title {
   font-weight: 700;
 }
+
 .c-line {
   width: 45px;
   height: 5px;
   background: $white;
 }
-.c-footer__cta{
+
+.c-footer__cta {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  flex-direction: column;
-  gap: .75rem;
-  .c-button{
+  gap: 0.75rem;
+
+  .c-button {
     display: grid;
     align-items: center;
-    grid-template-rows: 1fr;
-    grid-template-columns: 20% 80%;
-    color: $black;
-    background: $white;
-    word-wrap: break-word;
     width: 200px;
     height: 40px;
-    text-decoration: none;
     font-weight: 400;
+    color: $black;
+    text-decoration: none;
+    word-wrap: break-word;
+    background: $white;
+    grid-template-columns: 20% 80%;
+    grid-template-rows: 1fr;
   }
 }
-.c-footer__partners{
-  width: 100%;
+
+.c-footer__partners {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  width: 100%;
+
   @media (min-width: 950px) {
-    width: auto;
-    justify-content: space-evenly;
     gap: 2rem;
+    justify-content: space-evenly;
+    width: auto;
   }
 }
-.c-part__box{
+
+.c-part__box {
   display: grid;
-  grid-template-rows:25px 50px;
-  grid-template-columns: 1fr;
   font-size: 0.625rem;
+  grid-template-columns: 1fr;
+  grid-template-rows: 25px 50px;
 }
